<?xml version="1.0" encoding="utf-8"?>
<!-- 
 *  "Analog Compass" is an application for devices based on android os. 
 *  The application shows the orientation based on the intern magnetic sensor.   
 *  Copyright (C) 2009  Dieter Roth
 *
 *  This program is free software; you can redistribute it and/or modify it under the terms of the 
 *  GNU General Public License as published by the Free Software Foundation; either version 3 of 
 *  the License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
 *  without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. 
 *  See the GNU General Public License for more details.

 *  You should have received a copy of the GNU General Public License along with this program; 
 *  if not, see <http://www.gnu.org/licenses/>.
 -->
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:okCancelBar="http://schemas.android.com/apk/res/com.example.android.merge">



 
	<de.rothbayern.android.ac.CompassStandardView
		android:id="@+id/viewWorld"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
        android:scaleType="center"
		 />


		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="#80000000" 
			>
		
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/txtCalibrationHelp"
				android:textSize="18sp"
				android:textColor="#FF000000"
				android:background="#80FFFFFF"/>

			<TableLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="#80FFFFFF"
				>
				<TableRow >
					<Button
						android:id="@+id/cmdClearCalibration"
						android:layout_height="fill_parent"
						android:text="@string/no_calibration"
						android:textSize="15sp"
						android:layout_width="0px"
						android:layout_weight="1" />
					<Button
						android:id="@+id/cmdCalibrate"
						android:layout_height="fill_parent"
						android:text="@string/calibrate"
						android:textSize="15sp"
						android:layout_width="0px"
						android:layout_weight="1" />
				</TableRow>
			</TableLayout>
		</LinearLayout>



</merge>
